syntax = "proto3";

package com.hotel.reservation;

option java_multiple_files = true;
option java_package = "com.hotel.reservation.proto";
option java_outer_classname = "ReservationProto";

service ReservationService {
    rpc CreateReservation (CreateReservationRequest) returns (ReservationResponse);
    rpc GetReservation (GetReservationRequest) returns (ReservationResponse);
    rpc UpdateReservation (UpdateReservationRequest) returns (ReservationResponse);
    rpc DeleteReservation (DeleteReservationRequest) returns (DeleteReservationResponse);
}

message CreateReservationRequest {
    string dateDebut = 1;
    string dateFin = 2;
    string preferences = 3;
}

message GetReservationRequest {
    int64 id = 1;
}

message UpdateReservationRequest {
    int64 id = 1;
    string dateDebut = 2;
    string dateFin = 3;
    string preferences = 4;
}

message DeleteReservationRequest {
    int64 id = 1;
}

message ReservationResponse {
    int64 id = 1;
    string dateDebut = 2;
    string dateFin = 3;
    string preferences = 4;
}

message DeleteReservationResponse {
    bool success = 1;
}

